compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_removes_multiple_entire_echo_statement_used_with_literals_in_a_fn.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  fn() {\n    echo 1\n    echo \"wibble\"\n    Nil\n  }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  fn() {
    echo 1
    ↑     
    echo "wibble"
    Nil
  }
}


----- AFTER ACTION
public fn main() {
  fn() {
    Nil
  }
}
