compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_with_message_and_comment.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  echo 1 + 2\n    // Hello!\n    as \"message\"\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  echo 1 + 2
  ↑         
    // Hello!
    as "message"
}


----- AFTER ACTION
public fn main() {
  1 + 2
}
