compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_with_message_and_comment_3.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  echo 1 + 2 as\n    // Hello!\n    \"message\"\n\n  Nil\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  echo 1 + 2 as
  ↑            
    // Hello!
    "message"

  Nil
}


----- AFTER ACTION
public fn main() {
  1 + 2

  Nil
}
