compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__rename_invalid_string_prefix_pattern.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n    let assert \"prefix\" <> coolSuffix = \"prefix-suffix\"\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
    let assert "prefix" <> coolSuffix = "prefix-suffix"
                        ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION
public fn main() {
    let assert "prefix" <> cool_suffix = "prefix-suffix"
}
