compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__rename_invalid_string_prefix_pattern_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n    let assert \"prefix\" <> _boringSuffix = \"prefix-suffix\"\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
    let assert "prefix" <> _boringSuffix = "prefix-suffix"
                        ▔▔▔▔▔▔▔▔▔▔↑                       
}


----- AFTER ACTION
public fn main() {
    let assert "prefix" <> _boring_suffix = "prefix-suffix"
}
